test/compile_fail/if_then_else_branches.pine
def main do
  if true then
    42
  else
    "string" # error: failed to unify
  end
end
